--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,16 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    background-color: #bcd5d1;
 }
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #5a5c51;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #5a5c51;
     text-shadow: none;
 }
 
@@ -57,7 +58,7 @@ textarea {
    ========================================================================== */
 
 body {
-    font: 16px/26px Helvetica, Helvetica Neue, Arial;
+    font: 18px/26px Helvetica, Helvetica Neue, Arial;
 }
 
 .wrapper {
@@ -70,18 +71,18 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #e44d26;
+    border-bottom: 20px solid #ba9077;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    border-top: 20px solid #ba9077;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-    background: #f16529;
+    background: #1d2120;
 }
 
 .title {
@@ -105,19 +106,18 @@ nav a {
 
     text-align: center;
     text-decoration: none;
-    font-weight: bold;
 
-    color: white;
-    background: #e44d26;
+    color: #ba9077;
+    background: #1e1e1e;
 }
 
 nav a:hover,
 nav a:visited {
-    color: white;
+    color: #ba9077;
 }
 
 nav a:hover {
-    text-decoration: underline;
+    font-weight: bold;
 }
 
 /* ==============
@@ -133,12 +133,12 @@ nav a:hover {
 }
 
 .main aside {
-    color: white;
+    color: #ba9077;
     padding: 0px 5% 10px;
 }
 
 .footer-container footer {
-    color: white;
+    color: #ba9077;
     padding: 20px 0;
 }
 
